<resources>
    <string name="app_name">Basic Banking</string>
    <string name="todo">TODO</string>
    <string name="view_users">View All Users</string>
    <string name="select_a_user_to_transfer_money">Select a user to transfer money</string>
    <string name="search">Search</string>
    <string name="name">Name :</string>
    <string name="mobile_number">Mobile Number :</string>
    <string name="eamil_id">Eamil Id :</string>
    <string name="account_no">Account No :</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="current_balance">Current balance :</string>
    <string name="transfer_money">Transfer money</string>
    <string name="name1">name1</string>
    <string name="name2">name2</string>
    <string name="date">date</string>
    <string name="amount">amount</string>
    <string name="transaction_status">Transaction status</string>
    <string name="user_name">User Name</string>
    <string name="phone_numebr">Phone Number</string>
    <string name="rs">Rs.</string>
    <string name="balance">balance</string>
    <string name="slash">/-</string>
    <string name="no_history">No history</string>

</resources>